--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Namste Rohan</title>
+    <title>Fast Food Delivery</title>
 </head>
 
 <body>
     <div id="root">
-        <h1>ROhan</h1>
+        <h1>Rohan</h1>
     </div>
 
     <script type="module" src="./src/App.js">
-
     </script>
 </body>
 
